--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  shared_preferences: ^2.0.15
+  google_fonts: ^4.0.3
   flutter:
     sdk: flutter
 
@@ -35,6 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.3.3
+  gallery_saver: ^2.3.2
+  image_picker: ^1.0.4
+  image_cropper: ^4.0.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
